# perspective

./: .gitignore  ANALYSIS.md  CHANGELOG.md  Cargo.toml  PERFORMANCE_ANALYSIS.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json  postcreate.sh
.github/actions/install-deps/: action.yaml
.github/workflows/: build.yaml  build.yml
cmake/modules/: FindInstallDependency.cmake  FindProtoc.cmake
cpp/perspective/: CMakeLists.txt
cpp/perspective/src/cpp/: arrow_loader.cpp  base.cpp  column.cpp  emscripten_api.cpp  pool.cpp  proto_api.cpp  server.cpp  table.cpp  view.cpp
cpp/protos/: CMakeLists.txt  perspective.proto
docs/: deploy.mjs  package.json  template.html
docs/md/: perspective.js
docs/md/how_to/javascript/: importing.md  installation.md  plugin_settings.md  (+2 more)
docs/src/components/: demo.ts  gallery.ts
docs/src/data/: superstore.ts
docs/test/js/: examples.spec.mts
examples/blocks/: examples.js  index.mjs  package.json  server.mjs
examples/esbuild-clickhouse-virtual/: package.json
examples/esbuild-clickhouse-virtual/src/: index.ts
examples/esbuild-duckdb-virtual/: package.json
examples/esbuild-duckdb-virtual/src/: index.ts
examples/esbuild-example/: package.json
examples/esbuild-example/src/: index.js
examples/esbuild-remote/: package.json
examples/esbuild-remote/client/: index.html  index.js
examples/python-aiohttp/: package.json
examples/python-clickhouse-virtual/: config.py  index.html  package.json  server.py  taxi.py
examples/python-duckdb-virtual/: index.html  package.json
examples/python-polars-virtual/: index.html  package.json
examples/python-starlette/: package.json
examples/python-tornado/: client_server_editing.html  index.html  package.json  server.py  server_mode.html
examples/python-tornado-streaming/: index.html  package.json
examples/react-example/: package.json
examples/react-example/src/: index.css  index.tsx
examples/rust-axum/: Cargo.toml  package.json
examples/rust-axum/src/: index.html
examples/vite-example/: package.json
examples/vite-example/src/: index.js
examples/webpack-example/: package.json
examples/webpack-example/src/: index.js
rust/bootstrap/: main.rs
rust/bundle/: Cargo.toml  main.rs
rust/lint/: Cargo.toml
rust/metadata/: main.rs  package.json
rust/perspective/: Cargo.toml  build.js  package.json  tsconfig.json
rust/perspective-client/: Cargo.toml  build.rs  package.json  perspective.proto
rust/perspective-client/docs/: table.md
rust/perspective-client/docs/client/: table.md
rust/perspective-client/docs/table/: clear.md  columns.md  remove.md  replace.md  schema.md  size.md
rust/perspective-client/src/rust/: client.rs  lib.rs  table.rs  view.rs
rust/perspective-client/src/rust/config/: aggregates.rs  column_type.rs  expressions.rs  filters.rs  mod.rs  sort.rs  view_config.rs
rust/perspective-client/src/rust/utils/: mod.rs
rust/perspective-client/src/rust/virtual_server/: data.rs  duckdb_sql.rs  features.rs  generic_sql_model.rs  mod.rs  server.rs
rust/perspective-client/src/rust/virtual_server/generic_sql_model/: table_make_view.rs  tests.rs
rust/perspective-js/: Cargo.toml  package.json
rust/perspective-python/: Cargo.toml  build.mjs  build.rs  clean.mjs  package.json  pyproject.toml  requirements.txt
rust/perspective-python/bench/runtime/: benchmark-python.html  benchmark_hosted.html
rust/perspective-python/docs/: lib.md
rust/perspective-python/include/: server.h
rust/perspective-python/perspective/: __init__.py  legacy.py
rust/perspective-python/perspective/core/: _version.py
rust/perspective-python/perspective/templates/: exported_widget.html.template
rust/perspective-python/perspective/tests/: conftest.py
rust/perspective-python/perspective/tests/client_mode/: test_client_mode.py
rust/perspective-python/perspective/tests/manager/: test_manager.py
rust/perspective-python/perspective/tests/table/: test_exception.py  test_leaks.py  test_table.py  test_table_arrow.py  test_table_datetime.py  test_table_infer.py  test_table_numpy.py  test_table_on_disk.py  test_table_page_to_disk.py  test_table_pandas.py  test_to_arrow.py  test_to_format.py  test_update.py  test_update_arrow.py  test_update_numpy.py  test_update_pandas.py  test_view.py  test_view_expression.py
rust/perspective-python/perspective/tests/viewer/: test_viewer.py
rust/perspective-python/perspective/tests/virtual_servers/: test_duckdb.py  test_polars.py
rust/perspective-python/perspective/tests/widget/: test_anywidget_smoke.py  test_widget.py  test_widget_pandas.py
rust/perspective-python/perspective/virtual_servers/: clickhouse.py  duckdb.py  polars.py
rust/perspective-python/perspective/widget/: __init__.py
rust/perspective-python/perspective/widget/viewer/: viewer.py  viewer_traitlets.py
rust/perspective-python/src/: ffi.rs  lib.rs  server.cpp
rust/perspective-python/src/client/: client_async.rs  client_sync.rs  mod.rs  python.rs
rust/perspective-python/src/server/: generic_sql_model.rs  virtual_server_sync.rs
rust/perspective-server/: Cargo.toml  build.rs  package.json
rust/perspective-server/cmake/: Boost.txt.in  Pybind.txt.in  arrow.txt.in  date.txt.in  exprtk.txt.in  hopscotch.txt.in  ordered-map.txt.in  protobuf.txt.in  rapidjson.txt.in  re2.txt.in
rust/perspective-viewer/: Cargo.toml  build.js  build.mjs  package.json  tsconfig.json
rust/perspective-viewer/docs/: viewer.md
rust/perspective/src/: lib.rs
tools/bench/: basic_suite.mjs  charts_cases.mjs  charts_page_harness.js  charts_suite.mjs  cross_platform_suite.mjs  package.json  python_suite.mjs
tools/esbuild-plugin/: index.js  package.json  worker.js
tools/perspective-scripts/: lint.mjs  setup.mjs
tools/perspective-test/: package.json  playwright.config.ts  tsconfig.json
tools/scripts/: bench.mjs  lint.mjs  package.json  publish.mjs  repack_wheel.mjs  setup.mjs  test_js.mjs  workspace.mjs
tools/test/: load-viewer-two-csv.js  package.json  playwright.config.ts
(+479 files in other folders)
