#  ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
#  ┃ ██████ ██████ ██████       █      █      █      █      █ █▄  ▀███ █       ┃
#  ┃ ▄▄▄▄▄█ █▄▄▄▄▄ ▄▄▄▄▄█  ▀▀▀▀▀█▀▀▀▀▀ █ ▀▀▀▀▀█ ████████▌▐███ ███▄  ▀█ █ ▀▀▀▀▀ ┃
#  ┃ █▀▀▀▀▀ █▀▀▀▀▀ █▀██▀▀ ▄▄▄▄▄ █ ▄▄▄▄▄█ ▄▄▄▄▄█ ████████▌▐███ █████▄   █ ▄▄▄▄▄ ┃
#  ┃ █      ██████ █  ▀█▄       █ ██████      █      ███▌▐███ ███████▄ █       ┃
#  ┣━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┫
#  ┃ Copyright (c) 2017, the Perspective Authors.                              ┃
#  ┃ ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌ ┃
#  ┃ This file is part of the Perspective library, distributed under the terms ┃
#  ┃ of the [Apache License 2.0](https://www.apache.org/licenses/LICENSE-2.0). ┃
#  ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛

[package]
name = "perspective-client"
version = "2.8.0"
authors = ["Andrew Stein <steinlink@gmail.com>"]
edition = "2021"
description = "A data visualization and analytics component, especially well-suited for large and/or streaming datasets."
repository = "https://github.com/finos/perspective"
license = "Apache-2.0"
homepage = "https://perspective.finos.org"
keywords = ["experimental"]
include = ["src/**/*", "Cargo.toml", "package.json"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/rust/lib.rs"

[build-dependencies]
serde_json = { version = "1.0.59", features = ["raw_value"] }
glob = "0.3.0"
anyhow = "1.0.66"

prost-build = { version = "0.12.3" }

[dependencies]
# Provides async `Mutex` for locked sections such as `render`
async-lock = "2.5.0"

# Encode persistence tokens
base64 = "0.13.0"

# Timezone correction
chrono = "0.4"

# More derivable traits
derivative = "2.2.0"

# Easy way to define & implement a singleton trait (type extension)
extend = "1.1.2"

# Compress tokens
flate2 = "1.0.20"

# General async tools
futures = "0.3.28"

# General iterator improvements
itertools = "0.10.1"

nanoid = "0.4.0"

# Parse ExprTK for syntax highlighting.
nom = "7.1.1"

# Comma-sep numeric representation
num-format = "0.4.4"

paste = "1.0.14"

# https://github.com/tokio-rs/prost/discussions/719
prost = { version = "0.12.3", default-features = false, features = [
    "prost-derive",
    "std",
] }

prost-types = "0.12.3"

# MessagePack serialization
rmp-serde = "1.1.1"

# Serialization for tokens and JS APIs
serde = { version = "1.0", features = ["derive"] }

serde_bytes = "0.11"

# Support for "unknown"/dictionary types such as `plugin_config`
serde_json = { version = "1.0.107", features = ["raw_value"] }

thiserror = "1.0.56"

# Async-aware logging that can be disabled at compile-time.
tracing = { version = ">=0.1.36" }

tracing-subscriber = "0.3.15"
